---------------------------------------------------------------------------------------------------
Version: 5.1.3
Date: ????
  Bugfixes:
    - Fixed error with Companion Drones
---------------------------------------------------------------------------------------------------
Version: 5.1.2
Date: 2020-11-28
  Bugfixes:
    - Fixed errors when showing a gui with numbers in textfields
---------------------------------------------------------------------------------------------------
Version: 5.1.1
Date: 2020-11-24
  Changes:
    - Moved the top button into the mod button frame
---------------------------------------------------------------------------------------------------
Version: 5.1.0
Date: 2020-11-23
  Changes:
    - Updated for Factorio 1.1
---------------------------------------------------------------------------------------------------
Version: 5.0.7
Date: 2020-11-05
  Changes:
    - When using LTN and the train is moving to a temporary station it displays the next station in the schedule instead
---------------------------------------------------------------------------------------------------
Version: 5.0.6
Date: 2020-10-27
  Changes:
    - Proper error message when trying to remote control a train and an error happens
    - Players stop remote controlling a train when disconnecting in multiplayer
---------------------------------------------------------------------------------------------------
Version: 5.0.5
Date: 11. 08. 2020
  Bugfixes:
    - Fixed huge UPS drop when deconstructing a lot of trains by robots
---------------------------------------------------------------------------------------------------
Version: 5.0.4
Date: 28. 07. 2020
  Bugfixes:
    - Fixed alert message for temporary stations
---------------------------------------------------------------------------------------------------
Version: 5.0.3
Date: 18. 06. 2020
  Changes:
    - Added station names to the alert when a train takes too long between stations