@@ -3,6 +3,7 @@ Version: 5.1.3
 Date: ????
   Bugfixes:
     - Fixed error with Companion Drones
+    - Fixed train list filling with empty pages when using ModMash Splinter Underground
 ---------------------------------------------------------------------------------------------------
 Version: 5.1.2
 Date: 2020-11-28
